# neuroca

./: .cursorrules  .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  NCA_TODO.md  README.md  dependency_analysis.md  dependency_resolution_plan.md  docker-compose.yml  exceptions.py  health.py  project_builder.py  pyproject.toml
api/: __init__.py  app.py  dependencies.py  main.py
api/middleware/: __init__.py  authentication.py  logging.py  tracing.py
api/routes/: __init__.py  health.py  memory.py  metrics.py  system.py
api/schemas/: __init__.py  common.py  memory.py  requests.py  responses.py
api/websockets/: __init__.py  events.py  handlers.py
cli/: __init__.py  main.py
cli/commands/: __init__.py  db.py  memory.py  system.py
cli/utils/: __init__.py  formatting.py  validation.py
config/: __init__.py  default.py  development.py  production.py  settings.py  testing.py
core/: __init__.py  constants.py  enums.py  errors.py
core/events/: __init__.py  handlers.py  memory.py  system.py
core/health/: __init__.py  calculator.py  dynamics.py  metadata.py  monitoring.py  thresholds.py
core/utils/: __init__.py  security.py  serialization.py  validation.py
db/: __init__.py
db/alembic/: README  env.py  script.py.mako
db/connections/: __init__.py  mongo.py  neo4j.py  postgres.py  redis.py
db/migrations/: __init__.py
db/repositories/: __init__.py  base.py  ltm.py  mtm.py  stm.py
db/schemas/: __init__.py  ltm.py  mtm.py  stm.py
development_scripts/: dependency_validator.py  file_template_generator.py  find_dependencies.py  setup_pre_commit_hook.py  test_cli.py
docs/: 01_project_plan_overview.md  01_project_plan_structure.md  01_project_plan_tech.md  02A_component_architecture.md  IMPLEMENTATION.md  README.md  STEP1_SUBSTEP_1A.md  STEP1_SUBSTEP_1B.md  STEP1_SUBSTEP_1C.md  STEP2_SUBSTEP_2A.md  STEP2_SUBSTEP_2B.md  STEP2_SUBSTEP_2C.md  STEP3_SUBSTEP_3A.md  STEP3_SUBSTEP_3B.md  STEP3_SUBSTEP_3C.md  SUMMARY.md  implementation_progress.json  index.md  mkdocs.yml  setup_project_structure.sh
docs/api/: endpoints.md  examples.md  schemas.md
docs/architecture/: components.md  data_flow.md
docs/architecture/decisions/: adr-001-memory-tiers.md  adr-002-health-system.md  (+1 more)
docs/development/: contributing.md  environment.md  standards.md  workflow.md
docs/operations/: deployment.md  monitoring.md  troubleshooting.md
docs/user/: configuration.md  examples.md  getting-started.md  integration.md
infrastructure/: __init__.py  worker.py
infrastructure/docker/: __init__.py
infrastructure/kubernetes/: __init__.py
infrastructure/monitoring/: __init__.py  alerts.yaml  prometheus.yaml
infrastructure/terraform/: __init__.py
integration/: __init__.py
integration/adapters/: __init__.py  anthropic.py  base.py  openai.py  vertexai.py
integration/context/: __init__.py  injection.py  manager.py  retrieval.py
integration/langchain/: __init__.py  chains.py  memory.py  tools.py
integration/prompts/: __init__.py  memory.py  reasoning.py  templates.py
memory/: __init__.py  consolidation.py  episodic_memory.py  factory.py  manager.py  memory_consolidation.py  memory_decay.py  memory_retrieval.py  semantic_memory.py  working_memory.py
memory/annealing/: __init__.py  optimizer.py  phases.py  scheduler.py
memory/ltm/: __init__.py  manager.py  operations.py  storage.py
memory/lymphatic/: __init__.py  abstractor.py  consolidator.py  scheduler.py
memory/mtm/: __init__.py  manager.py  operations.py  storage.py
memory/stm/: __init__.py  manager.py  operations.py  storage.py
memory/tubules/: __init__.py  connections.py  pathways.py  weights.py
monitoring/: __init__.py
monitoring/health/: __init__.py  checks.py  probes.py
monitoring/logging/: __init__.py  formatters.py  handlers.py
monitoring/metrics/: __init__.py  collectors.py  exporters.py  registry.py
monitoring/tracing/: __init__.py  middleware.py  spans.py
neuroca/: __init__.py
neuroca/core/: __init__.py
neuroca/infrastructure/: __init__.py
scripts/db/: backup.sh  initialize.sh  restore.sh
scripts/deployment/: deploy.sh  rollback.sh  validate.sh
scripts/development/: lint.sh  setup.sh  test.sh
scripts/operations/: cleanup.sh  monitor.sh  scale.sh
tests/: __init__.py  conftest.py
tests/factories/: __init__.py  memory.py  users.py
tests/integration/: __init__.py
tests/performance/: __init__.py  benchmarks.py  locustfile.py
tests/unit/: __init__.py
tests/utils/: __init__.py  assertions.py  helpers.py  mocks.py
tools/analysis/: memory_analyzer.py  performance_analyzer.py
tools/development/: code_generator.py  schema_generator.py
tools/migration/: data_migrator.py  schema_migrator.py
tools/visualization/: memory_visualizer.py  relationship_visualizer.py
utils/: __init__.py  base.py
(+11 files in other folders)
